--- a/src/styles.css
+++ b/src/styles.css
@@ -94,3 +94,7 @@
         background-color: #407088;
         box-shadow: 3px 2px 2px rgb(217, 214, 214)
       }
+
+      .signature{
+        text-align: center;
+      }
